# omniconvert

./: meson.build
.github/workflows/: CI.yml
source/: ar2.c  armax.c  armax.h  armlist.c  cbc.c  cheat.c  common.c  common.h  common.h.in  gs3.c  meson.build  omniconvert.c  p2m.c  resource.h  scf.c  shim_windows.h  translate.c  translate.h
source/libbig_int/: meson.build
source/libbig_int/src/: basic_funcs.c  bitset_funcs.c  meson.build  number_theory.c
