project('omniconvert', ['c', 'cpp'],
        license : 'GPL-2.0-or-later',
        version : '1.1.2-experimental',
        default_options : ['c_std=c17',
                           'cpp_std=c++20',
                           'buildtype=release',
                           'default_library=static',
                           'cpp_eh=a'])

subdir('source')
